unsplash copy page

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name":"unsplash-copy-page",
-  "homepage":"https://FranklynSierra.github.io/unsplash-copy-page",
+  "name": "unsplash-copy-page",
+  "homepage": "https://FranklynSierra.github.io/unsplash-copy-page",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,8 +20,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
